--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -10,6 +10,12 @@
 </head>
 <body>
 	<div id="wrapper">
+		<div id="header">D3Up</div>
+		<ul id="navigation">
+			<li><a href="/">Home</a></li>
+			<li><a href="/item/create">+Item</a></li>
+			<li><a href="/hero/create">+Hero</a></li>
+		</ul>
 		<div id="main">
 			<div id="content" class="inline-flow">
 				<?= $this->layout()->content ?>
