--- a/application/views/scripts/item/create.phtml
+++ b/application/views/scripts/item/create.phtml
@@ -1,11 +1,39 @@
 <style type="text/css" media="screen">
 	.create-form {
 		padding: 20px;
+		display: inline-block;
 	}
 	.create-form select {
-		width: 500px;
+		width: 400px;
+	}
+	.item-preview {
+		float: right;
+		margin-top: 50px;
+		display: inline-block;
+	}
+	.item-preview ul.attrs input {
+		margin: 2px 5px;
+		width: 30px;
 	}
 </style>
+<div class="item-preview">
+	<div class="d3-item">
+		<div class="top"><p class=""></p></div>
+		<div class="item">
+			<p class="item-type">
+				<span class="quality"></span>
+				<span class="type"></span>
+			</p>
+			<p class="stats stats-armor">
+				<span class="big-stat"></span>
+				<span class="stat-helper"></span>
+			</p>
+			<ul class="attrs">
+			</ul>
+		</div>
+		<div class="bottom"></div>
+	</div>
+</div>
 <div class="create-form">
 	<div>
 		<p>What kind of item is this?</p>
@@ -55,36 +83,297 @@
 		<p>What is the quality/rarity of the item?</p>
 		<select name="quality" id="quality">
 			<option></option>
-			<option value="inferior">Inferior</option>
-			<option value="normal">Normal</option>
-			<option value="superior">Superior</option>
-			<option value="magic">Magic</option>
-			<option value="rare">Rare</option>
-			<option value="legendary">Legendary</option>
-			<option value="set">Set</option>
+			<option value="1">Inferior</option>
+			<option value="2">Normal</option>
+			<option value="3">Superior</option>
+			<option value="4">Magic</option>
+			<option value="5">Rare</option>
+			<option value="6">Legendary</option>
+			<option value="7">Set</option>
 		</select>
 	</div>
 	<div>
 		<p>What types of stats are on this item?</p>
 		<select name="attributes" id="attributes" multiple>
-			<option value="strength">Strength</option>
-			<option value="intelligence">Intelligence</option>
-			<option value="dexterity">Dexterity</option>
-			<option value="vitality">Vitality</option>
+			<option value='strength'>Strength</option>
+			<option value='intelligence'>Intelligence</option>
+			<option value='vitality'>Vitality</option>
+			<option value='dexterity'>Dexterity</option>
+			<option value='resist-all'>Resistance to All Elements</option>
+			<option value='armor'>Armor</option>
+			<option value='plus-life'>% Life</option>
+			<option value='life-regen'>Regenerates Life per Second</option>
+			<option value='plus-block'>Chance to Block</option>
+			<option value='cc-reduce'>Reduces the duration of control impairing effects</option>
+			<option value='elite-reduce'>Reduces damage from elites</option>
+			<option value='melee-reduce'>Reduces damage from melee attacks</option>
+			<option value='range-reduce'>Reduces damage from ranged attacks</option>
+			<option value='arcane-resist'>Arcane Resistance</option>
+			<option value='cold-resist'>Cold Resistance</option>
+			<option value='fire-resist'>Fire Resistance</option>
+			<option value='lightning-resist'>Lightning Resistance</option>
+			<option value='physical-resist'>Physical Resistance</option>
+			<option value='poison-resist'>Poison Resistance</option>
+			<option value='thorns'>Melee attackers take damage per hit</option>
+			<option value='attack-speed'>Attack speed increased</option>
+			<option value='critical-hit'>Critical Hit Chance increased</option>
+			<option value='critical-hit-damage'>Critical Hit Damage increased</option>
+			<option value='plus-damage'>+% Damage</option>
+			<option value='min-damage'>Minimum Damage</option>
+			<option value='max-damage'>Maximum Damage</option>
+			<option value='arcane-damage'>Arcane Damage</option>
+			<option value='cold-damage'>Cold Damage</option>
+			<option value='fire-damage'>Fire Damage</option>
+			<option value='holy-damage'>Holy Damage</option>
+			<option value='lightning-damage'>Lightning Damage</option>
+			<option value='poison-damage'>Poison Damage</option>
+			<option value='elite-damage'>Increases Damage against Elites</option>
+			<option value='chance-bleed'>Chance to inflict Bleed</option>
+			<option value='chance-blind'>Chance to Blind on Hit</option>
+			<option value='chance-chill'>Chance to Chill on Hit</option>
+			<option value='chance-fear'>Chance to Fear on Hit</option>
+			<option value='chance-freeze'>Chance to Freeze on Hit</option>
+			<option value='chance-immobilize'>Chance to Immobilize on Hit</option>
+			<option value='chance-knockback'>Chance to Knockback on Hit</option>
+			<option value='chance-slow'>Chance to Slow on Hit</option>
+			<option value='chance-stun'>Chance to Stun on Hit</option>
+			<option value='plus-movement'>Movement Speed</option>
+			<option value='plus-pickup-radius'>Increases Gold and Health pickup</option>
+			<option value='plus-experience'>Experience</option>
+			<option value='plus-gold-find'>Gold Find</option>
+			<option value='plus-magic-find'>Magic Find</option>
+			<option value='health-globes'>Health Globes grant Life</option>
+			<option value='life-steal'>Damage Dealt is Converted to Life</option>
+			<option value='life-kill'>Life after each Kill</option>
+			<option value='life-hit'>Each hit adds Life</option>
+			<option value='level-reduce'>Level Requirement reduced</option>
+			<option value='indestructable'>Ignores durability loss</option>
+			<option value='bb-bash'>Increases bash damage</option>
+			<option value='bb-cleave'>Increases cleave damage</option>
+			<option value='bb-frenzy'>Increases frenzy damage</option>
+			<option value='bb-rend'>Reduces resource cost of Rend</option>
+			<option value='bb-revenge'>Increases Critical Hit Chance of Revenge</option>
+			<option value='bb-weapon-throw'>Reduces resource cost of Weapon Throw</option>
+			<option value='bb-hammer-of-the-ancients'>Reduces resource cost of Hammer of the Ancients</option>
+			<option value='bb-whirlwind'>Increases Critical Hit Chance of Whirlwind</option>
+			<option value='bb-overpower'>Increases Critical Hit Chance of Overpower</option>
+			<option value='bb-seismic-slam'>Increases Critical Hit Chance of Seismic Slam</option>
+			<option value='fury-max'>Maximum Fury</option>
+			<option value='hatred-regen'>Increases Hatred Regeneration</option>
+			<option value='max-discipline'>Maximum Discipline</option>
+			<option value='dh-chakram'>Reduces resource cost of Chakram</option>
+			<option value='dh-evasive-fire'>Increases Evasive Fire damage</option>
+			<option value='dh-grenades'>Increases Grenades Damage</option>
+			<option value='dh-impale'>Reduces resource cost of Impale</option>
+			<option value='dh-spike-trap'>Increases Spike Trap damage</option>
+			<option value='dh-bola-shot'>Increases Bola Shot damage</option>
+			<option value='dh-elemental-arrow'>Increases Elemental Arrow damage</option>
+			<option value='dh-entangling-shot'>Increases Entangling Shot damage</option>
+			<option value='dh-hungering-arrow'>Increases Hungering Arrow damage</option>
+			<option value='dh-multishot'>Increases Critical Hit Chance of Multishot</option>
+			<option value='dh-rapid-fire'>Increases Critical Hit Chance of Rapid Fire</option>
+			<option value='spirit-spent-life'>Gain Life per Spirit Spent</option>
+			<option value='spirit-regen'>Increases Spirit Regeneration</option>
+			<option value='mk-crippling-wave'>Increases Crippling Wave damage</option>
+			<option value='mk-cyclone-strike'>Reduces resource cost of Cyclone Strike</option>
+			<option value='mk-deadly-reach'>Increases Deadly Reach damage</option>
+			<option value='mk-exploding-palm'>Increases Exploding Palm damage</option>
+			<option value='mk-fists-of-thunder'>Increases Fist of Thunder damage</option>
+			<option value='mk-sweeping-wind'>Increases Sweeping Wind damage</option>
+			<option value='mk-way-of-the-hundred-fists'>Increases Way of the Hundred Fists damage</option>
+			<option value='mk-lashing-tail-kick'>Reduces resource cost of Lashing Tail Kick</option>
+			<option value='mk-tempest-rush'>Increases Critical Hit Chance of Tempest Rush</option>
+			<option value='mk-wave-of-light'>Increases Critical Hit Chance of Wave of Light</option>
+			<option value='mana-regen'>Increases Mana Regeneration</option>
+			<option value='mana-max'>Maximum Mana</option>
+			<option value='wd-firebomb'>Reduces resource cost of Firebomb</option>
+			<option value='wd-haunt'>Increases Haunt Damage</option>
+			<option value='wd-acid-clouds'>Increases Critical Hit Chance of Acid Clouds</option>
+			<option value='wd-firebats'>Reduces resource cost of Firebats</option>
+			<option value='wd-zombie-dogs'>Reduces cooldown of Summon Zombie Dogs</option>
+			<option value='wd-plague-of-toads'>Increases Plague of Toads damage</option>
+			<option value='wd-poison-darts'>Increaeses Poison Darts damage</option>
+			<option value='wd-spirit-barrage'>Increases Spirit Barrage damage</option>
+			<option value='wd-wall-of-zombies'>Reduces cooldown of Wall of Zombies</option>
+			<option value='wd-zombie-charger'>Reduces resource cost of Zombie Charger</option>
+			<option value='ap-on-crit'>Critical Hits grant Arcane Power</option>
+			<option value='ap-max'>Maximum Arcane Power</option>
+			<option value='wz-arcane-torrent'>Reduces resource cost of Arcane Torrent</option>
+			<option value='wz-disintegrate'>Reduces resource cost of Disintegrate</option>
+			<option value='wz-electrocute'>Increases Electrocute damage</option>
+			<option value='wz-explosive-blast'>Increases Critical Hit Chance of Explosive Blast</option>
+			<option value='wz-hydra'>Reduces resource cost of Hydra</option>
+			<option value='wz-ray-of-frost'>Increases Critical Hit Chance of Ray of Frost</option>
+			<option value='wz-energy-twister'>Increases Critical Hit Chance of Energy Twister</option>
+			<option value='wz-magic-missle'>Increases Magic Missle damage</option>
+			<option value='wz-arcane-orb'>Increases Critical Hit Chance of Arcane Orb</option>
+			<option value='wz-blizzard'>Increases duration of Blizzard</option>
+			<option value='wz-meteor'>Reduces resource cost of Meteor</option>
+			<option value='wz-shock-pulse'>Increases Shock Pulse damage</option>
+			<option value='wz-spectral-blade'>Increases Spectral Blade damage</option>
 		</select>
 	</div>
 </div>
 <script type="text/javascript">
+	var td = [];
+	td['strength'] = '+VVV Strength';
+	td['intelligence'] = '+VVV Intelligence';
+	td['vitality'] = '+VVV Vitality';
+	td['dexterity'] = '+VVV Dexterity';
+	td['resist-all'] = '+VVV Resistance to All Elements';
+	td['armor'] = '+VVV Armor';
+	td['plus-life'] = '+VVV% Life';
+	td['life-regen'] = 'Regenerates VVV Life per Second';
+	td['plus-block'] = '+VVV% Chance to Block';
+	td['cc-reduce'] = 'Reduces the duration of control impairing effects by VVV%';
+	td['elite-reduce'] = 'Reduces damage from elites by VVV%';
+	td['melee-reduce'] = 'Reduces damage from melee attacks by VVV%';
+	td['range-reduce'] = 'Reduces damage from ranged attacks by VVV%';
+	td['arcane-resist'] = '+VVV Arcane Resistance';
+	td['cold-resist'] = '+VVV Cold Resistance';
+	td['fire-resist'] = '+VVV Fire Resistance';
+	td['lightning-resist'] = '+VVV Lightning Resistance';
+	td['physical-resist'] = '+VVV Physical Resistance';
+	td['poison-resist'] = '+VVV Poison Resistance';
+	td['thorns'] = 'Melee attackers take VVV damage per hit';
+	td['attack-speed'] = 'Attack speed increased by VVV%';
+	td['critical-hit'] = 'Critical Hit Chance increased by VVV%';
+	td['critical-hit-damage'] = 'Critical Hit Damage increased by VVV%';
+	td['plus-damage'] = '+VVV% Damage';
+	td['min-damage'] = '+VVV Minimum Damage';
+	td['max-damage'] = '+VVV Maximum Damage';
+	td['arcane-damage'] = '+VVV Arcane Damage';
+	td['cold-damage'] = '+VVV Cold Damage';
+	td['fire-damage'] = '+VVV Fire Damage';
+	td['holy-damage'] = '+VVV Holy Damage';
+	td['lightning-damage'] = '+VVV Lightning Damage';
+	td['poison-damage'] = '+VVV Poison Damage';
+	td['elite-damage'] = 'Increases Damage against Elites by VVV%';
+	td['chance-bleed'] = 'VVV% chance to inflict Bleed for VVV damage over 5 seconds';
+	td['chance-blind'] = 'VVV% chance to Blind on Hit';
+	td['chance-chill'] = 'VVV% chance to Chill on Hit';
+	td['chance-fear'] = 'VVV% chance to Fear on Hit';
+	td['chance-freeze'] = 'VVV% chance to Freeze on Hit';
+	td['chance-immobilize'] = 'VVV% chance to Immobilize on Hit';
+	td['chance-knockback'] = 'VVV% chance to Knockback on Hit';
+	td['chance-slow'] = 'VVV% chance to Slow on Hit';
+	td['chance-stun'] = 'VVV% chance to Stun on Hit';
+	td['plus-movement'] = '+VVV% Movement Speed';
+	td['plus-pickup-radius'] = 'Increases Gold and Health pickup by VVV yards';
+	td['plus-experience'] = 'Monster kills grant +VVV experience';
+	td['plus-gold-find'] = '+VVV% Extra Gold from Monsters';
+	td['plus-magic-find'] = 'VVV% Better Chance of finding Magic Items';
+	td['health-globes'] = 'Health Globes grant +VVV Life';
+	td['life-steal'] = 'VVV% of Damage Dealt is Converted to Life';
+	td['life-kill'] = '+VVV Life after each Kill';
+	td['life-hit'] = 'Each hit adds +VVV Life';
+	td['level-reduce'] = 'Level Requirement reduced by VVV';
+	td['indestructable'] = 'Ignores durability loss';
+	td['bb-bash'] = 'Increases bash damage by VVV%';
+	td['bb-cleave'] = 'Increases cleave damage by VVV%';
+	td['bb-frenzy'] = 'Increases frenzy damage by VVV%';
+	td['bb-rend'] = 'Reduces resource cost of Rend by VVV Fury';
+	td['bb-revenge'] = 'Increases Critical Hit Chance of Revenge by VVV%';
+	td['bb-weapon-throw'] = 'Reduces resource cost of Weapon Throw by VVV Fury';
+	td['bb-hammer-of-the-ancients'] = 'Reduces resource cost of Hammer of the Ancients by VVV Fury';
+	td['bb-whirlwind'] = 'Increases Critical Hit Chance of Whirlwind by VVV%';
+	td['bb-overpower'] = 'Increases Critical Hit Chance of Overpower by VVV%';
+	td['bb-seismic-slam'] = 'Increases Critical Hit Chance of Seismic Slam by VVV%';
+	td['fury-max'] = '+VVV Maximum Fury';
+	td['hatred-regen'] = 'Increases Hatred Regeneration by VVV per Second';
+	td['max-discipline'] = '+VVV Maximum Discipline';
+	td['dh-chakram'] = 'Reduces resource cost of Chakram by VVV Hatred';
+	td['dh-evasive-fire'] = 'Increases Evasive Fire damage by VVV%';
+	td['dh-grenades'] = 'Increases Grenades Damage by [V]%';
+	td['dh-impale'] = 'Reduces resource cost of Impale by VVV Hatred';
+	td['dh-spike-trap'] = 'Increases Spike Trap damage by VVV%';
+	td['dh-bola-shot'] = 'Increases Bola Shot damage by VVV%';
+	td['dh-elemental-arrow'] = 'Increases Elemental Arrow damage by VVV%';
+	td['dh-entangling-shot'] = 'Increases Entangling Shot damage by VVV%';
+	td['dh-hungering-arrow'] = 'Increases Hungering Arrow damage by VVV%';
+	td['dh-multishot'] = 'Increases Critical Hit Chance of Multishot by VVV%';
+	td['dh-rapid-fire'] = 'Increases Critical Hit Chance of Rapid Fire by VVV%';
+	td['spirit-spent-life'] = 'Gain VVV per Spirit Spent';
+	td['spirit-regen'] = 'Increases Spirit Regeneration by VVV per Second';
+	td['mk-crippling-wave'] = 'Increases Crippling Wave damage by VVV%';
+	td['mk-cyclone-strike'] = 'Reduces resource cost of Cyclone Strike by VVV Spirit';
+	td['mk-deadly-reach'] = 'Increases Deadly Reach damage by VVV%';
+	td['mk-exploding-palm'] = 'Increases Exploding Palm damage by VVV%';
+	td['mk-fists-of-thunder'] = 'Increases Fist of Thunder damage by VVV%';
+	td['mk-sweeping-wind'] = 'Increases Sweeping Wind damage by VVV%';
+	td['mk-way-of-the-hundred-fists'] = 'Increases Way of the Hundred Fists damage by VVV%';
+	td['mk-lashing-tail-kick'] = 'Reduces resource cost of Lashing Tail Kick by VVV Spirit';
+	td['mk-tempest-rush'] = 'Increases Critical Hit Chance of Tempest Rush by VVV%';
+	td['mk-wave-of-light'] = 'Increases Critical Hit Chance of Wave of Light by VVV%';
+	td['mana-regen'] = 'Increases Mana Regeneration by VVV per Second';
+	td['mana-max'] = '+VVV Maximum Mana';
+	td['wd-firebomb'] = 'Reduces resource cost of Firebomb by VVV Mana';
+	td['wd-haunt'] = 'Increases Haunt Damage by VVV%';
+	td['wd-acid-clouds'] = 'Increases Critical Hit Chance of Acid Clouds by VVV%';
+	td['wd-firebats'] = 'Reduces resource cost of Firebats by VVV Mana';
+	td['wd-zombie-dogs'] = 'Reduces cooldown of Summon Zombie Dogs by VVV Seconds';
+	td['wd-plague-of-toads'] = 'Increases Plague of Toads damage by VVV%';
+	td['wd-poison-darts'] = 'Increaeses Poison Darts damage by VVV%';
+	td['wd-spirit-barrage'] = 'Increases Spirit Barrage damage by VVV%';
+	td['wd-wall-of-zombies'] = 'Reduces cooldown of Wall of Zombies by VVV Seconds';
+	td['wd-zombie-charger'] = 'Reduces resource cost of Zombie Charger by VVV Mana';
+	td['ap-on-crit'] = 'Critical Hits grant VVV Arcane Power';
+	td['ap-max'] = '+VVV Maximum Arcane Power';
+	td['wz-arcane-torrent'] = 'Reduces resource cost of Arcane Torrent by VVV Arcane Power';
+	td['wz-disintegrate'] = 'Reduces resource cost of Disintegrate by VVV Arcane Power';
+	td['wz-electrocute'] = 'Increases Electrocute damage by VVV%';
+	td['wz-explosive-blast'] = 'Increases Critical Hit Chance of Explosive Blast by VVV%';
+	td['wz-hydra'] = 'Reduces resource cost of Hydra by VVV Arcane Power';
+	td['wz-ray-of-frost'] = 'Increases Critical Hit Chance of Ray of Frost by VVV%';
+	td['wz-energy-twister'] = 'Increases Critical Hit Chance of Energy Twister by VVV%';
+	td['wz-magic-missle'] = 'Increases Magic Missle damage by VVV%';
+	td['wz-arcane-orb'] = 'Increases Critical Hit Chance of Arcane Orb by VVV%';
+	td['wz-blizzard'] = 'Increases duration of Blizzard by VVV Seconds';
+	td['wz-meteor'] = 'Reduces resource cost of Meteor by VVV Arcane Power';
+	td['wz-shock-pulse'] = 'Increases Shock Pulse damage by VVV%';
+	td['wz-spectral-blade'] = 'Increases Spectral Blade damage by VVV%'
+
 	$("#type").select2({
 		placeholder: 'Choose the item type...',
 		allowClear: true
+	});
+	$("#type").bind("change", function() {
+		var name = $(this).find(":selected").html(),
+				type = $(".item-preview .item-type .type").html(name);
 	});
 	$("#quality").select2({
 		placeholder: 'Choose the item\'s quality...',
 		allowClear: true
 	});
+	$("#quality").bind("change", function() {
+		var name = $(this).find(":selected").html(),
+				top = $(".top p"),
+				nameClass = $(this).find(":selected").val(),
+				container = $(".item-preview .item-type"),
+				quality = $(".item-preview .item-type .quality").html(name);
+		top.removeClass("quality-1 quality-2 quality-3 quality-4 quality-5 quality-6 quality-7");
+		top.addClass("quality-" + nameClass);
+		container.removeClass("quality-1 quality-2 quality-3 quality-4 quality-5 quality-6 quality-7");
+		container.addClass("quality-" + nameClass);
+	});
 	$("#attributes").select2({
 		placeholder: 'What attributes does this item have?',
 		allowClear: true
-	})
+	});
+	$("#attributes").bind("change", function() {
+		var attrs = $(this).val(),
+				elements = $(".item-preview .item ul.attrs");
+		$.each(attrs, function(k,v) {
+			var exists = elements.find("." + v),
+					attr = $("<li></li>");
+			if(exists.empty()) {
+				var label = td[v],
+						input = "<input type='text' name='" + v + "' value=''/>";
+				label = label.replace("VVV", input);
+				attr.html(label);
+				attr.addClass(v);
+				elements.append(attr);
+			}
+		});
+	});
 </script>
