--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -17,11 +17,8 @@
 			<li><a href="/hero/create">+Hero</a></li>
 		</ul>
 		<div id="main">
-			<div id="content" class="inline-flow">
+			<div id="content">
 				<?= $this->layout()->content ?>
-			</div>
-			<div id="context" class="inline-flow">
-
 			</div>
 		</div>
 	</div>
