Fixed crash on removing last one.

--- a/application/views/scripts/item/create.phtml
+++ b/application/views/scripts/item/create.phtml
@@ -294,24 +294,25 @@
 		var attrs = $(this).val(),
 				elements = $(".item-preview .item ul.attrs");
 		// Add new Elements to the Item for Editing
-		$.each(attrs, function(k,v) {
-			var exists = elements.find("." + v),
-					attr = $("<li></li>");
-			if(!exists.length) {
-				var label = td[v],
-						input = "<input type='text' name='" + v + "' value=''/>";
-				label = label.replace("VVV", input);
-				attr.html(label);
-				attr.addClass(v);
-				elements.append(attr);
-			}
-		});
+		if(attrs) {
+			$.each(attrs, function(k,v) {
+				var exists = elements.find("." + v),
+						attr = $("<li></li>");
+				if(!exists.length) {
+					var label = td[v],
+							input = "<input type='text' name='" + v + "' value=''/>";
+					label = label.replace("VVV", input);
+					attr.html(label);
+					attr.addClass(v);
+					elements.append(attr);
+				}
+			});			
+		}
 		// Remove deleted elements from the Item
 		elements.find("li").each(function() {
-			if(attrs.indexOf($(this).attr("class")) == -1) {
+			if(!attrs || attrs.indexOf($(this).attr("class")) == -1) {
 				$(this).remove();
 			}
 		});
-		
 	});
 </script>
