--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -13,8 +13,7 @@
 		<div id="header">D3Up</div>
 		<ul id="navigation">
 			<li><a href="/">Home</a></li>
-			<li><a href="/item/create">+Item</a></li>
-			<li><a href="/hero/create">+Hero</a></li>
+			<li><a href="/item/create">Create Item</a></li>
 		</ul>
 		<div id="main">
 			<div id="content">
@@ -22,5 +21,8 @@
 			</div>
 		</div>
 	</div>
+	<script src="//static.getclicky.com/js" type="text/javascript"></script>
+	<script type="text/javascript">try{ clicky.init(66607061); }catch(e){}</script>
+	<noscript><p><img alt="Clicky" width="1" height="1" src="//in.getclicky.com/66607061ns.gif" /></p></noscript>
 </body>
 </html>
