Removed my name :)

--- a/application/views/scripts/item/create.phtml
+++ b/application/views/scripts/item/create.phtml
@@ -51,7 +51,7 @@
 				<ul class="attrs">
 				</ul>
 			</div>
-			<div class="bottom">Submitted by: Jesta</div>
+			<div class="bottom"> </div>
 		</div>
 	</div>
 	<div class="create-form">
