--- a/application/views/scripts/record/view.phtml
+++ b/application/views/scripts/record/view.phtml
@@ -7,4 +7,18 @@
 <div class="single-item">
 	<?= $this->displayItem($this->record) ?>
 	<p style='text-align: center'>Link: <input type='text' value='http://d3up.com<?= $this->url(array('record' => $this->record), $this->record->route, true) ?>'/></p>
+	<p>Text Version of the Item:
+<? $p = new D3Up_View_Helper_DisplayItem() ?>
+<textarea style="text-align: left; width: 425px; height: 200px">
+<?= $this->record->name?> (<?= $p->_qualityMap[$this->record->quality] ?> <?= $p->prettyDisplay($this->record->type) ?>)
+<? if(isset($this->record->stats['dps'])): ?>
+<?= $this->record->stats['dps'] ?> dps
+<?= implode("-", $this->record->stats['damage']->export()) ?> damage
+<?= $this->record->stats['speed'] ?> attack speed
+<? endif; ?>
+<? foreach($this->record->attrs as $k => $v): ?>
+<?= $p->prettyDisplay($k, $v) ?> 
+<? endforeach ?>
+</textarea>
+	</p>
 </div>
