--- a/application/views/scripts/record/view.phtml
+++ b/application/views/scripts/record/view.phtml
@@ -1,28 +1,6 @@
-<style type="text/css" media="screen">
-	.single-item {
-		width: 430px;
-		margin: 20px auto;
-	}
-</style>
-<div class="single-item">
-	<?= $this->displayItem($this->record) ?>
-	<p style='text-align: center'>Link: <input type='text' value='http://d3up.com<?= $this->url(array('record' => $this->record), $this->record->route, true) ?>'/></p>
-	<p>Text Version of the Item:
-<? $p = new D3Up_View_Helper_DisplayItem() ?>
-<textarea style="text-align: left; width: 425px; height: 200px">
-<?= $this->record->name?> (<?= $p->_qualityMap[$this->record->quality] ?> <?= $p->prettyDisplay($this->record->type) ?>)
-<? if(isset($this->record->stats['dps'])): ?>
-<?= $this->record->stats['dps'] ?> dps
-<?= implode("-", $this->record->stats['damage']->export()) ?> damage
-<?= $this->record->stats['speed'] ?> attack speed
-<? elseif(isset($this->record->stats['armor'])): ?>
-<?= $this->record->stats['armor']?> Armor
+<? if($this->record->_type == 'item'): ?>
+	<?= $this->render('record/item.phtml') ?>
 <? endif; ?>
-<? if($this->record->attrs): ?>
-<? foreach($this->record->attrs as $k => $v): ?>
-<?= $p->prettyDisplay($k, $v) ?> 
-<? endforeach ?>
+<? if($this->record->_type == 'hero'): ?>
+	<?= $this->render('record/hero.phtml') ?>
 <? endif; ?>
-</textarea>
-	</p>
-</div>
