--- a/application/views/scripts/item/create.phtml
+++ b/application/views/scripts/item/create.phtml
@@ -28,6 +28,9 @@
 	#base_dps-label, #base_dps-element,
 	#base_damage_min-label, #base_damage_min-element,
 	#base_damage_max-label, #base_damage_max-element,
+	#base_block_chance-label, #base_block_chance-element,
+	#base_block_amount_min-label, #base_block_amount_min-element,
+	#base_block_amount_max-label, #base_block_amount_max-element,
 	#base_speed-label, #base_speed-element,
 	#base_armor-label, #base_armor-element {
 		display: none;
@@ -50,8 +53,14 @@
 				<p class="stats stats-speed"></p>
 				<ul class="attrs">
 				</ul>
+				<ul class="sockets">
+				</ul>
 			</div>
-			<div class="bottom"> </div>
+			<div class="bottom"> 
+				<? if($profile = Epic_Auth::getInstance()->getProfile()): ?>
+					Created by: <?= $profile->username ?>
+				<? endif; ?>
+			</div>
 		</div>
 	</div>
 	<div class="create-form">
@@ -59,6 +68,65 @@
 	</div>
 </form>
 <script type="text/javascript">
+	var gems = {
+		chipped_amethyst: ['Chipped Amethyst' ,'+5% Life' ,'Each Hit Adds +2 Life' ,'+6 Vitality'],
+		chipped_emerald: ['Chipped Emerald' ,'+5% Extra Gold from Monsters' ,'Critical Hit Damage Increased by 10%' ,'+6 Dexterity'],
+		chipped_ruby: ['Chipped Ruby' ,'Increased Experience Rewarded per Kill by 5%' ,'+2-4 Damage' ,'+6 Strength'],
+		chipped_topaz: ['Chipped Topaz' ,'5% Better Chance of Finding Magical Items' ,'Melee attackers take 2 damage per hit' ,'+6 Intelligence'],
+		flawed_amethyst: ['Flawed Amethyst' ,'+6% Life' ,'+10 Vitality' ,'Each Hit Adds +3 Life'],
+		flawed_emerald: ['Flawed Emerald' ,'+7% Extra Gold from Monsters' ,'Critical Hit Damage Increased by 15%' ,'+10 Dexterity'],
+		flawed_ruby: ['Flawed Ruby' ,'Increased Experience Rewarded per Kill by 7%' ,'+4-8 Damage' ,'+10 Strength'],
+		flawed_topaz: ['Flawed Topaz' ,'7% Better Chance of Finding Magical Items' ,'Melee attackers take 3 damage per hit' ,'+10 Intelligence'],
+		amethyst: ['Amethyst' ,'+7% Life' ,'Each Hit Adds +6 Life' ,'+14 Vitality'],
+		emerald: ['Emerald' ,'+9% Extra Gold from Monsters' ,'Critical Hit Damage Increased by 20%' ,'+14 Dexterity'],
+		ruby: ['Ruby' ,'Increased Experience Rewarded per Kill by 9%' ,'+8-16 Damage' ,'+14 Strength'],
+		topaz: ['Topaz' ,'9% Better Chance of Finding Magical Items' ,'Melee attackers take 6 damage per hit' ,'+14 Intelligence'],
+		flawless_amethyst: ['Flawless Amethyst' ,'+8% Life' ,'Each Hit Adds +10 Life' ,'+18 Vitality'],
+		flawless_emerald: ['Flawless Emerald' ,'+11% Extra Gold from Monsters' ,'Critical Hit Damage Increased by 25%' ,'+18 Dexterity'],
+		flawless_ruby: ['Flawless Ruby' ,'Increased Experience Rewarded per Kill by 11%' ,'+10-20 Damage' ,'+18 Strength'],
+		flawless_topaz: ['Flawless Topaz' ,'11% Better Chance of Finding Magical Items' ,'Melee attackers take 10 damage per hit' ,'+18 Intelligence'],
+		perfect_amethyst: ['Perfect Amethyst' ,'+9% Life' ,'Each Hit Adds +15 Life' ,'+22 Vitality'],
+		perfect_emerald: ['Perfect Emerald' ,'13% Extra Gold from Monsters' ,'Critical Hit Damage Increased by 30%' ,'+22 Dexterity'],
+		perfect_ruby: ['Perfect Ruby' ,'Increased Experience Rewarded per Kill by 13%' ,'+11-22 Damage' ,'+22 Strength'],
+		perfect_topaz: ['Perfect Topaz' ,'13% Better Chance of Finding Magical Items' ,'Melee attackers take 15 damage per hit' ,'+22 Intelligence'],
+		radiant_amethyst: ['Radiant Amethyst' ,'+10% Life' ,'Each Hit Adds +25 Life' ,'+26 Vitality'],
+		radiant_emerald: ['Radiant Emerald' ,'15% Extra Gold from Monsters' ,'Critical Hit Damage Increased by 35%' ,'+26 Dexterity'],
+		radiant_ruby: ['Radiant Ruby' ,'Increased Experience Rewarded per Kill by 15%' ,'+12-24 Damage' ,'+26 Strength'],
+		radiant_topaz: ['Radiant Topaz' ,'15% Better Chance of Finding Magical Items' ,'Melee attackers take 30 damage per hit' ,'+26 Intelligence'],
+		square_amethyst: ['Square Amethyst' ,'+11% Life' ,'Each Hit Adds +35 Life' ,'+30 Vitality'],
+		square_emerald: ['Square Emerald' ,'17% Extra Gold from Monsters' ,'Critical Hit Damage Increased by 40%' ,'+30 Dexterity'],
+		square_ruby: ['Square Ruby' ,'Increased Experience Rewarded per Kill by 17%' ,'+13-26 Damage' ,'+30 Strength'],
+		square_topaz: ['Square Topaz' ,'17% Better Chance of Finding Magical Items' ,'Melee attackers take 50 damage per hit' ,'+30 Intelligence'],
+		flawless_square_amethyst: ['Flawless Square Amethyst' ,'+12% Life' ,'Each Hit Adds +65 Life' ,'+34 Vitality'],
+		flawless_square_emerald: ['Flawless Square Emerald' ,'19% Extra Gold from Monsters' ,'Critical Hit Damage Increased by 45%' ,'+34 Dexterity'],
+		flawless_square_ruby: ['Flawless Square Ruby' ,'Increased Experience Rewarded per Kill by 19%' ,'+14-28 Damage' ,'+34 Strength'],
+		flawless_square_topaz: ['Flawless Square Topaz' ,'19% Better Chance of Finding Magical Items' ,'Melee attackers take 100 damage per hit' ,'+34 Intelligence'],
+		perfect_square_amethyst: ['Perfect Square Amethyst' ,'+13% Life' ,'Each hit adds +105 Life' ,'+38 Vitality'],
+		perfect_square_emerald: ['Perfect Square Emerald' ,'+21% Extra Gold from Monsters' ,'Critical Hit Damage Increased by 50%' ,'+38 Dexterity'],
+		perfect_square_ruby: ['Perfect Square Ruby' ,'Increases Experience Rewarded per Kill by 21%' ,'+15-30 Damage' ,'+38 Strength'],
+		perfect_square_topaz: ['Perfect Square Topaz' ,'21% Better Chance of Finding Magical Items' ,'Melee attackers take 200 damage per hit' ,'+38 Intelligence'],
+		radiant_square_amethyst: ['Radiant Square Amethyst' ,'+14% Life' ,'Each Hit Adds +190 Life' ,'+42 Vitality'],
+		radiant_square_emerald: ['Radiant Square Emerald' ,'+23% Extra Gold from Monsters' ,'Critical Hit Damage Increased by 60%' ,'+42 Dexterity'],
+		radiant_square_ruby: ['Radiant Square Ruby' ,'Increases Experience Rewarded per Kill by 23%' ,'+16-32 Damage' ,'+42 Strength'],
+		radiant_square_topaz: ['Radiant Square Topaz' ,'23% Better Chance of Finding Magical Items' ,'Melee attackers take 350 damage per hit' ,'+42 Intelligence'],
+		star_amethyst: ['Star Amethyst' ,'+15% Life' ,'Each Hit Adds +300 Life' ,'+46 Vitality'],
+		star_emerald: ['Star Emerald' ,'+25 Extra Gold from Monsters' ,'Critical Hit Damage Increased by 70%' ,'+46 Dexterity'],
+		star_ruby: ['Star Ruby' ,'Increases Experience Rewarded per Kill by 25%' ,'+17-34 Damage' ,'+46 Strength'],
+		star_topaz: ['Star Topaz' ,'25% Better Chance of Finding Magical Items' ,'Melee attackers take 600 damage per hit' ,'+46 Intelligence'],
+		flawless_star_amethyst: ['Flawless Star Amethyst' ,'+16% Life' ,'Each Hit Adds +400 Life' ,'+50 Vitality'],
+		flawless_star_emerald: ['Flawless Star Emerald' ,'+27% Extra Gold from Monsters' ,'Critical Hit Damage Increased by 80%' ,'+50 Dexterity'],
+		flawless_star_ruby: ['Flawless Star Ruby' ,'Increases Experience Rewarded per Kill by 27%' ,'+18-36 Damage' ,'+50 Strength'],
+		flawless_star_topaz: ['Flawless Star Topaz' ,'27% Better Chance of Finding Magical Items' ,'Melee attackers take 900 damage per hit' ,'+50 Intelligence'],
+		perfect_star_amethyst: ['Perfect Star Amethyst' ,'+17% Life' ,'Each Hit Adds +500 Life' ,'+54 Vitality'],
+		perfect_star_emerald : ['Perfect Star Emerald ' ,'+29% Extra Gold from Monsters' ,'Critical Hit Damage Increased by 90%' ,'+54 Dexterity'],
+		perfect_star_ruby: ['Perfect Star Ruby' ,'Increases Experience Rewarded per Kill by 29%' ,'+19-38 Damage' ,'+54 Strength'],
+		perfect_star_topaz : ['Perfect Star Topaz ' ,'29% Better Chance of Finding Magical Items' ,'Melee attackers take 1250 damage per hit' ,'+54 Intelligence'],
+		radiant_star_amethyst: ['Radiant Star Amethyst' ,'+18% Life' ,'Each Hit Adds +600 Life' ,'+58 Vitality'],
+		radiant_star_emerald: ['Radiant Star Emerald' ,'+31% Extra Gold from Monsters' ,'Critical Hit Damage Increased by 100%' ,'+58 Dexterity'],
+		radiant_star_ruby: ['Radiant Star Ruby' ,'Increases Experience Rewarded per Kill by 31%' ,'+20-40 Damage' ,'+58 Strength'],
+		radiant_star_topaz: ['Radiant Star Topaz' ,'31% Better Chance of Finding Magical Items' ,'Melee attackers take 1800 damage per hit' ,'+58 Intelligence']		
+	};
+
 	var td = [];
 	td['strength'] = '+VVV Strength';
 	td['intelligence'] = '+VVV Intelligence';
@@ -177,6 +245,10 @@
 	td['wz-shock-pulse'] = 'Increases Shock Pulse damage by VVV%';
 	td['wz-spectral-blade'] = 'Increases Spectral Blade damage by VVV%'
 	switch($("#type").val()) {
+			case "shield":
+				$("#base_dps-element, #base_damage_min-element, #base_damage_max-element, #base_speed-element, #base_dps-label, #base_damage_min-label, #base_damage_max-label, #base_speed-label").hide();
+				$("#base_armor-label, #base_armor-element, #base_block_chance-element, #base_block_chance-label, #base_block_amount_min-element, #base_block_amount_min-label, #base_block_amount_max-element, #base_block_amount_max-label").show();			
+				break;
 			case "belt":
 			case "boots":
 			case "bracers":
@@ -190,8 +262,7 @@
 			case "spirit-stone":
 			case "voodoo-mask":
 			case "wizard-hat":
-			case "shield":
-				$("#base_dps-element, #base_damage_min-element, #base_damage_max-element, #base_speed-element, #base_dps-label, #base_damage_min-label, #base_damage_max-label, #base_speed-label").hide();
+				$("#base_dps-element, #base_damage_min-element, #base_damage_max-element, #base_speed-element, #base_dps-label, #base_damage_min-label, #base_damage_max-label, #base_speed-label, #base_block_chance-element, #base_block_chance-label, #base_block_amount_min-element, #base_block_amount_min-label, #base_block_amount_max-element, #base_block_amount_max-label").hide();
 				$("#base_armor-label, #base_armor-element").show();
 				break;
 			case "2h-mace":
@@ -213,7 +284,7 @@
 			case "spear":
 			case "sword":
 			case "wand":
-				$("#base_armor-label, #base_armor-element").hide();
+				$("#base_armor-label, #base_armor-element, #base_block_chance-element, #base_block_chance-label, #base_block_amount_min-element, #base_block_amount_min-label, #base_block_amount_max-element, #base_block_amount_max-label").hide();
 				$("#base_dps-element, #base_damage_min-element, #base_damage_max-element, #base_speed-element, #base_dps-label, #base_damage_min-label, #base_damage_max-label, #base_speed-label").show();
 				break;
 			default:
@@ -232,6 +303,34 @@
 				type = $(".item-preview .item-type .type").html(name),
 				add = $(".additional");
 		switch(val) {
+			case "shield":
+				$("#base_dps-element, #base_damage_min-element, #base_damage_max-element, #base_speed-element, #base_dps-label, #base_damage_min-label, #base_damage_max-label, #base_speed-label").hide();
+				$("#base_armor-label, #base_armor-element, #base_block_chance-element, #base_block_chance-label, #base_block_amount_min-element, #base_block_amount_min-label, #base_block_amount_max-element, #base_block_amount_max-label").show();
+				var stats = $(".item-preview .stats"),
+						input1 = $("#base_armor"),
+						input2 = $("#base_block_amount_min"),
+						input3 = $("#base_block_amount_max"),
+						input4 = $("#base_block_chance"),
+						speedStat = $(".stats-speed"),
+						damageStat = $(".stats-damage"),
+						bigStat = stats.find(".big-stat"),
+						bigLabel = stats.find(".stat-helper");
+				$(".stats-damage, .stats-speed").empty();
+				stats.removeClass("stats-armor stats-dps").addClass("stats-armor");
+				bigLabel.html("Armor");
+				input1.keyup(function(event) {
+						bigStat.html(input1.val());
+				}).val('').trigger('keyup');					
+				input2.keyup(function(event) {
+						damageStat.html(input2.val() + "-" + input3.val() + " <span class='stat-helper'>Block Amount</span>");
+				}).val('').trigger('keyup');					
+				input3.keyup(function(event) {
+						damageStat.html(input2.val() + "-" + input3.val() + " <span class='stat-helper'>Block Amount</span>");
+				}).val('').trigger('keyup');					
+				input4.keyup(function(event) {
+						speedStat.html(input4.val() + "% <span class='stat-helper'>Chance to Block</span>");
+				}).val('').trigger('keyup');							
+				break;
 			case "belt":
 			case "boots":
 			case "bracers":
@@ -245,8 +344,7 @@
 			case "spirit-stone":
 			case "voodoo-mask":
 			case "wizard-hat":
-			case "shield":
-				$("#base_dps-element, #base_damage_min-element, #base_damage_max-element, #base_speed-element, #base_dps-label, #base_damage_min-label, #base_damage_max-label, #base_speed-label").hide();
+				$("#base_dps-element, #base_damage_min-element, #base_damage_max-element, #base_speed-element, #base_dps-label, #base_damage_min-label, #base_damage_max-label, #base_speed-label, #base_block_chance-element, #base_block_chance-label, #base_block_amount_min-element, #base_block_amount_min-label, #base_block_amount_max-element, #base_block_amount_max-label").hide();
 				$("#base_armor-label, #base_armor-element").show();
 				var stats = $(".item-preview .stats"),
 						input = $("#base_armor"),
@@ -289,7 +387,7 @@
 						bigLabel = stats.find(".stat-helper");
 				stats.removeClass("stats-armor stats-dps").addClass("stats-dps");
 				bigLabel.html("Damage per Second");
-				$("#base_armor-label, #base_armor-element").hide();
+				$("#base_armor-label, #base_armor-element, #base_block_chance-element, #base_block_chance-label, #base_block_amount_min-element, #base_block_amount_min-label, #base_block_amount_max-element, #base_block_amount_max-label").hide();
 				$("#base_dps-element, #base_damage_min-element, #base_damage_max-element, #base_speed-element, #base_dps-label, #base_damage_min-label, #base_damage_max-label, #base_speed-label").show();
 				input1.keyup(function(event) {
 						bigStat.html(input1.val());
@@ -318,6 +416,25 @@
 	$("#quality").select2({
 		placeholder: 'Choose the item\'s quality...',
 		allowClear: true
+	});
+	$("#sockets").select2({
+		placeholder: 'No Sockets...',
+		allowClear: true
+	});
+	$("#sockets").bind("change", function() {
+		var sockets = $(this).find(":selected").val(),
+				container = $(".item-preview .item .sockets");
+		container.empty();
+		if(sockets > 0) {
+			for(i=0; i<sockets; i++) {
+				var select = $("<select name='socket"+i+"'><option></option></select>");
+				$.each(gems, function(k,v) {
+					select.append("<option value='" + k + "'>" + v[0] + "</option>");
+				});
+				container.append($("<li>").append(select));
+			}
+			container.find("select").select2();
+		}
 	});
 	$("#quality").bind("change", function() {
 		var name = $(this).find(":selected").html(),
@@ -363,10 +480,16 @@
 	$("#quality").trigger('change');
 	$("#type").trigger('change');
 	$("#name").trigger("keyup");
-	<? if(isset($_POST)): ?>
-	var post = <?= json_encode($_POST) ?> ;
+	<? if(!empty($_POST)): ?>
+	var post = <?= json_encode($_POST) ?>;
 	$("ul.attrs li input").each(function() {
+		console.log("Setting" + $(this).attr("name") + " to " + post[$(this).attr("name")]);
 		$(this).val(post[$(this).attr("name")]);
 	});
+	$(".create-form input").each(function() {
+		$(this).val(post[$(this).attr("name")]);
+		$(this).trigger("keyup");
+	});
 	<? endif ?>
+	
 </script>
