Few style changes and added sockets to item text renderings

--- a/application/views/scripts/record/item.phtml
+++ b/application/views/scripts/record/item.phtml
@@ -27,6 +27,11 @@
 <?= $p->prettyDisplay($k, $v) ?> 
 <? endforeach ?>
 <? endif; ?>
+<? if($this->record->sockets): ?>
+<? foreach($this->record->sockets as $k => $v): ?>
+[Socket] <?= ucwords(str_replace("_"," ", $v)) ?> (<?= $p->gemEffect($v, $this->record->type) ?>)
+<? endforeach ?>
+<? endif; ?>
 </textarea>
 	</p>
 </div>
